<resources>
    <string name="app_name">EsNote</string>
    <string name="app_item_note">Note</string>
    <string name="app_item_reader">Reader</string>
    <string name="app_item_video">Video</string>
    <string name="app_item_image_viewer">Image</string>
    <string name="app_item_test_tool">Debug Tool</string>
    <string name="palette_clear">Clear</string>
    <string name="tool_undo">撤销</string>
    <string name="tool_redo">重做</string>
    <string name="tool_background">Template</string>
    <string name="tool_refresh_screen">全刷</string>
    <string name="tool_more">More</string>
    <string name="tool_pen_type">Type</string>
    <string name="pen_type_pen">Paint</string>
    <string name="pen_type_pencil">Pencil</string>
    <string name="pen_type_brush">Brush</string>
    <string name="tool_pen_size">Size</string>
    <string name="eraser_type_path">Path eraser</string>
    <string name="eraser_type_scope">Scope eraser</string>
    <string name="eraser_type_all">全部擦除</string>
    <string name="tool_shape_line">Line</string>
    <string name="tool_shape_round">Circle</string>
    <string name="tool_shape_rect">Rectangle</string>
    <string name="tool_shape_triangle">Triangle</string>
    <string name="tool_save_exit">保存退出</string>
    <string name="tool_image">Image</string>
    <string name="btn_remove_page">Delete page</string>
    <string name="delete_page_failed">当前只有一个页面，无法删除...</string>
    <string name="dlg_message_delete_page">是否删除本页？</string>
    <string name="btn_rename">Rename</string>
    <string name="dialog_rename_title">Rename</string>
    <string name="dialog_field_name">Name</string>
    <string name="default_note_name">New note</string>
    <string name="tool_page_prev">Previous</string>
    <string name="tool_page_next">Next</string>
    <string name="tool_page_del">Delete</string>
</resources>