<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <ToggleButton
        android:id="@+id/eraser_type_path"
        style="@style/MyToolBarToggleButton"
        android:textOff="@string/eraser_type_path"
        android:textOn="@string/eraser_type_path"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/eraser_type_scope"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/eraser_type_scope"
        style="@style/MyToolBarToggleButton"
        android:textOff="@string/eraser_type_scope"
        android:textOn="@string/eraser_type_scope"
        app:layout_constraintEnd_toStartOf="@+id/eraser_type_all"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eraser_type_path"
        app:layout_constraintTop_toTopOf="@+id/eraser_type_path" />

    <ToggleButton
        android:id="@+id/eraser_type_all"
        style="@style/MyToolBarToggleButton"
        android:textOff="@string/eraser_type_all"
        android:textOn="@string/eraser_type_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eraser_type_scope"
        app:layout_constraintTop_toTopOf="@+id/eraser_type_scope" />

</androidx.constraintlayout.widget.ConstraintLayout>